// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringsFret component makes snapshot 1`] = `
<styled.div
  isHighlighted={false}
>
  <StringsContent
    isHighlighted={false}
    note="E2"
  />
</styled.div>
`;

exports[`StringsFret component makes snapshot, showNotes={false} 1`] = `
<styled.div
  isHighlighted={false}
/>
`;
